完善RAG全链路计时并修复审计引用冲突